[BED-23] Add ToolsGui and ShearsItem
Took 9 minutes